# pump-ahead

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  PumpAhead_Algorithm_Spec.md  README.md  hacs.json  pyproject.toml
.claude/: audit-report.md  settings.json  settings.local.json  shelly-analysis.md
.claude/agents/: fleet-dev.md  fleet-planner.md  fleet-reviewer.md
.claude/guides/: api-design.md  csharp-conventions.md  devops-conventions.md  fsharp-conventions.md  python-conventions.md  sql-database.md  testing-strategies.md  typescript-conventions.md
.claude/prompts/: fleet-workflow.md  fleet-workflow.md.backup.20260405_003227
.github/workflows/: ci.yml  validate.yml
custom_components/: __init__.py
custom_components/pumpahead/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  dashboard_shadow_mode.yaml  (+5 more)
docs/: code-guide.md  code-review-results.md  frontend-requirements.md  heishamon_integration.md  lightweight-charts-llm-knowledge.md  pump-ahead-hld.md
notebooks/: rc_identification.ipynb
pumpahead/: __init__.py  ab_testing.py  building_profiles.py  config.py  controller.py  cop_calculator.py  cross_validation.py  cwu_coordinator.py  dew_point.py  disturbance_vector.py  estimator.py  hp_mode_mapping.py  identification_report.py  identifier.py  log_serializer.py  metrics.py  mode_controller.py  model.py  optimizer.py  safety_rules.py  safety_yaml_generator.py  scenarios.py  sensor_noise.py  simulated_room.py  simulation_log.py  simulator.py  solar.py  solar_gti.py  split_coordinator.py  ufh_loop.py  visualization.py  watchdog.py  weather.py  weather_comp.py
scripts/: configure-shelly-webhook.ps1
src/: PumpAhead.sln
tests/: conftest.py
(+288 files in other folders)
