[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pumpahead"
version = "0.1.0"
description = "Predictive heating/cooling controller for Home Assistant using Model Predictive Control"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Hubert Ciebiada" },
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "cvxpy>=1.5",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
    "pandas>=2.0",
    "plotly>=5.18",
    "dash>=2.14",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=4.0",
    "pumpahead[viz]",
]

[tool.setuptools.packages.find]
include = ["pumpahead*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Fast, isolated unit tests",
    "simulation: Slow scenario-based simulation tests",
    "slow: Tests that take more than a few seconds",
]
addopts = "-ra -q --strict-markers --tb=short"
filterwarnings = [
    "error",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["homeassistant.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["custom_components.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cvxpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true
